--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
@@ -19,6 +20,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7"
   },
