--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@tanstack/react-table": "^8.20.1",
     "axios": "^1.7.4",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
