--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@tanstack/react-form": "^0.31.0",
     "@tanstack/react-table": "^8.20.1",
+    "@tanstack/zod-form-adapter": "^0.31.0",
     "axios": "^1.7.4",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
@@ -23,7 +25,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
