--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
+    "react-select": "^5.8.0",
     "recoil": "^0.7.7",
     "zod": "^3.23.8"
   },
