--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "recoil": "^0.7.7",
+    "socket.io-client": "^4.7.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
