--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.4",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.21",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
