--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.21",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-live-clock": "^6.1.23-beta",
     "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "recoil": "^0.7.7",
