--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tanstack/react-form": "^0.31.0",
     "@tanstack/react-table": "^8.20.1",
     "@tanstack/zod-form-adapter": "^0.31.0",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.4",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
