--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.4",
-    "framer-motion": "^11.3.24",
+    "framer-motion": "^11.11.1",
+    "lottie-react": "^2.4.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.21",
     "react": "^18.3.1",
