--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
+    "react-open-weather": "^1.3.8",
     "typescript": "^5"
   },
   "lint-staged": {
